--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -37,7 +37,7 @@
                         <ul>
                             <li><span>2023</span><br>Advance Python with Django: From TCA Gurugram</li>
                             <li><span>2022</span><br>C language, Visual Basic 6.0, Basic Python, MySQL Diploma: From Sunshine Campus (Kharkhoda) </li>
-                            <li><span>2020</span><br>12th: PRATAP SINGH MEMORIAL SR SEC SCHOOL (Kharkhoda) </li>
+                            <li><span>2020</span><br>BCA: Government College Bahadurgarh</li>
                             
                         </ul>
                     </div>
